--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     ]
   },
   "dependencies": {
+    "eslint": "^7.13.0",
     "expect": "^23.4.0",
     "mocha-multi": "^1.1.3",
     "react": "^16.4.1",
